:zap:: specifications and categories adjusts
